2012-01-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Add a test whether libbfd requires libdl; fix
	the broken (always positive) test for libz as well.

2011-12-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/avarice.1: Drop the remark that software breakpoints were
	currently not supported: they are.

2011-12-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/avarice.1: Update list of devices.

2011-12-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2.h: Keep track of whether starting a debugging session
	with the ICE actually succeeded, and only ever attempt to send a
	CMND_RESTORE_TARGET in that case.  Sending it without a debugWIRE
	session succeeded (e.g. since the DWEN fuse wasn't active) might
	screw up the ICE's firmware.
	* src/jtag2io.cc: (Dito.)

2011-12-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	(Merging branch /branches/jwunsch_except/avarice)
	* src/jtag.h: Remove the restoreTarget parameter from the
	resumeProgram() method again; target restoration upon GDB
	disconnect is now being handled properly by catching the exception
	thrown in that case, through the destruction of theJtagICE object.
	* src/jtag1.h: (Dito.)
	* src/jtag2.h: (Dito.)
	* src/remote.cc: (Dito.)
	* src/jtag2io.cc: (Dito.)
	* src/jtag2run.cc: (Dito.)
	* src/jtagrun.cc: (Dito.)

2011-12-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	(Merging branch /branches/jwunsch_except/avarice)
	* src/remote.cc: Rearrange the entire error handling to use
	exceptions, rather than a mix between error code returns, and
	prematurely exiting the program from deep inside, without any
	attempt to cleanup the JTAG ICE connection status.  Get rid of all
	those scary check(), unixCheck() and jtagCheck() functions, catch
	exceptions where it makes sense.
	* src/remote.h: (Dito.)
	* src/jtag2io.cc: (Dito.)
	* src/jtagmisc.cc: (Dito.)
	* src/jtag1.h: (Dito.)
	* src/jtag2.h: (Dito.)
	* src/avarice.h: (Dito.)
	* src/jtagio.cc: (Dito.)
	* src/jtag2rw.cc: (Dito.)
	* src/main.cc: (Dito.)