@@ -207,7 +207,13 @@ atxmega128a1revd (\fBo\fP) (\fB*\fP)
 .br
 atxmega16d4 (\fBo\fP) (\fB*\fP)
 .br
-atxmega256a3 (\fBo\fP) (\fB*\fP)
+atxmega128b1 (\fBo\fP) (\fB*\fP)
+.br
+atxmega128b3 (\fBo\fP) (\fB*\fP)
+.br
+atxmega64b1 (\fBo\fP) (\fB*\fP)
+.br
+atxmega64b3 (\fBo\fP) (\fB*\fP)
 .RE
 .PP
 \fBo\fP \- Only supported by the JTAG ICE mkII and AVR Dragon device.
