@@ -9,6 +9,8 @@ Summary of changes since AVaRICE 2.12
   connection status.  This is a lot cleaner now, with a much reduced
   chance to leave the ICE in an unworkable state when exiting the
   program.
+  
+. New devices: ATxmega128B1, ATxmega128B3, ATxmega64B1, ATxmega64B3
 
 =====================================================================
 
